--- a/src/styling/themeColors.scss
+++ b/src/styling/themeColors.scss
@@ -1,10 +1,10 @@
 // Green home colors PRIMARY COLOR
-$home-color: rgba(#329d97, 1);
+$home-color: rgba(#081f4b, 1);
 $home-color-darken: rgba(#2c928c, 1);
-$home-color-light: rgba(#5ed7d0, 1);
+$home-color-light: rgba(#1d2f59, 1);
 
 // Orange -> SECONDARY COLOR
-$secondary-color: rgba(#f4a396, 1);
+$secondary-color: rgba(#0183ff, 1);
 $secondary-color-darken: rgba(#d68375, 1);
 
 //Grey colors
