--- a/src/styling/base.scss
+++ b/src/styling/base.scss
@@ -1,8 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600&display=swap");
 @import "themeColors.scss";
 
-$topbar-height: 50px;
-$sidebar-width: 250px;
+$topbar-height: 60px;
+$leftSideBarOpenWidth: 260px;
+$leftSideBarClosedWidth: 2rem;
+
+body {
+    font-family: "Quicksand", sans-serif;
+}
 
 .darkedhover:hover {
     background-color: $home-color-darken;
@@ -30,4 +35,28 @@ $sidebar-width: 250px;
     color: white;
     border: 1px solid $dark-grey;
     border-radius: 5px;
+}
+
+.row {
+    display: flex;
+}
+
+.column2 {
+    width: 50%;
+}
+
+.column3 {
+    width: 33.33%;
+}
+
+.column4 {
+    width: 25%;
+}
+
+.column5 {
+    width: 20%;
+}
+
+h1, h2, h3, h4, h5, p {
+    margin:unset;
 }
